# alex

./: .env.example  .gitignore  CLAUDE.md  MAGIATOTAL-MIGRATION-COMPLETE.md  PUSH-MAGIATOTAL-TO-GITHUB.md
backend/api/: pyproject.toml
backend/charter/: pyproject.toml
backend/database/: test_data_api.py
backend/database_dynamo/: README.md  pyproject.toml  seed_data.py  verify_database.py
backend/database_dynamo/src/: __init__.py  client.py  models.py
backend/database_dynamo/tests/: __init__.py  test_positions.py
backend/planner/: pyproject.toml
backend/reporter/: pyproject.toml
backend/retirement/: pyproject.toml
backend/tagger/: pyproject.toml
guides/: 5_database.md
magiatotal-website/: PROJECT-SUMMARY.txt  QUICK-START.md  README.md  START-HERE.txt  atracoes.html  contato.html  index.html  pacotes.html  test-locally.sh
magiatotal-website/css/: style.css
magiatotal-website/js/: main.js
terraform/5_database_dynamo/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/6_agents/: main.tf  terraform.tfvars.example  variables.tf
terraform/7_frontend/: main.tf
terraform/8_enterprise/: terraform.tfvars.example
